Add user and profile management features, including user registration, profile updates, and password reset token handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=tikio
 
 # Server configuration
 server.port=8080
+
+#Database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/tikiodb
+spring.datasource.username=tikioadmin
+spring.datasource.password=tikio2025
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
