--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/tikiodb
 spring.datasource.username=tikioadmin
 spring.datasource.password=tikio2025
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JWT configuration
+jwt.secret=your-very-long-random-secret-key-32-bytes-minimum-2025!
+
+# JPA configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
